Add name and phone number to accounts
